syntax = "proto3";

option go_package = "https://github.com/Werenfeldt/MiniProject3/Auction";

package main;

service Auction {
    rpc Bid(BidRequest) returns (BidResponse);
    rpc Result(GetResult) returns (HighestResult);
    rpc Done(DoneRequest) returns (Empty);
}

message BidRequest{
    int32 id = 1;
    int32 bid = 2;
}

message BidResponse{
    string response = 1;
    string mssg = 2;
    bool aucDone = 3;
}

message GetResult{
    int32 id = 1;
    string getResult = 2; 
}

message HighestResult{
    int32 result = 1;
}

message DoneRequest{
    int32 clientId = 1;
}

message Empty{

}